--- a/docs/css/profile_tweak.css
+++ b/docs/css/profile_tweak.css
@@ -11,7 +11,6 @@
 
 .splash-container-3 {
   width: 100%;
-  height: 550px;
   position: relative;
   padding-left: 0;
   padding-right: 0;
