--- a/static/css/home_tweak.css
+++ b/static/css/home_tweak.css
@@ -67,7 +67,6 @@
   left: 0;
   width: 100%;
   height: 30%;
-  padding: 7px 0;
 }
 
 .gal-caption-text-2 {
@@ -77,12 +76,21 @@
   position: absolute;
   bottom: 10%;
   width: 70%;
-  padding-left: 15px;
-  padding-bottom: 15px;
+  padding-left: 5%;
+  padding-bottom: 5%;
 }
 
 .gal-img {
-  width: 300px;
-  padding: 7px 0;
+  width: 100%;
+  padding: 10px 10px;
 }
 
+
+.gal-outer-container{
+  width: 100%;
+  float: left;
+}
+.gal-inner-container{
+  width: 100%;
+  float: right;
+}
